argo-cd/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    name: example
    stage: int
